# todo-rust--maud-htmx-sqlx

./: Cargo.toml  todos.db  todos.db-shm  todos.db-wal
migrations/: 20240626065249_init.sql
src/: layout.rs  main.rs
