[package]
name = "rustyblog"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = "0.10.64"
actix-web = "4.3.1"
shuttle-actix-web = "0.47.0"
shuttle-runtime = "0.47.0"
anyhow = "1.0"
futures = "0.3"
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio-native-tls"] }
structopt = "0.3"
tokio = { version ="1.38.0" , features = ["rt", "macros"]}
awc = { version = "3.5.0", features = [ "openssl" ] }
maud = { version = "*", features = ["actix-web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
time = "0.3.36"
chrono = "0.4.38"